--- a/예상 오픈북 문제.md
+++ b/예상 오픈북 문제.md
@@ -1,313 +1,253 @@
-# 예상 오픈북 시험 대비 – 종합 문제집
+문제 유형은 개념 설명, 단답형, 서술형, 코드 분석, 빈칸 채우기, 비교 설명 등으로 구성하며, 시험에 자주 출제될 만한 핵심 내용들을 골고루 포함하도록 하겠습니다.
 
-> 이 문서는 [System-SW-Working GitHub Repository README](https://github.com/MastMoon/System-SW-Working/blob/main/README.md)에 기록하신 모든 내용을 바탕으로, 오픈북 시험에서 출제될 가능성이 높은 문제들을 예상하여 정리한 자료입니다.  
-> (문제 수는 매우 많고 상세하므로, 필요에 따라 해당 주제만 선택하여 학습하시기 바랍니다.)
 
----
+1. [단답형 문제]  
+문제: `ls` 명령으로 숨김 파일까지 포함하여 현재 디렉터리의 모든 파일을 표시하려면 어떤 옵션을 사용해야 하나요?  
+정답: `ls -a` 옵션을 사용하면 현재 디렉터리의 숨김 파일까지 모두 표시할 수 있습니다.
 
-## 목차
+2. [비교 설명 문제]  
+문제: `rm` 명령과 `rmdir` 명령의 차이점을 설명하시오.  
+정답: `rm`은 파일을 삭제하는 명령으로, `-r` 옵션을 사용하면 디렉터리와 그 하위 내용을 재귀적으로 삭제할 수 있습니다 (`-f` 옵션으로 확인 없이 강제 삭제 가능). 반면 `rmdir`은 **빈 디렉터리**를 삭제하는 명령으로, 디렉터리가 비어있지 않으면 삭제할 수 없습니다.
 
-1. [운영체제 기본 개념](#1-운영체제-기본-개념)  
-   1.1 [운영체제의 정의와 역할](#11-운영체제의-정의와-역할)  
-   1.2 [운영체제의 종류 및 비교](#12-운영체제의-종류-및-비교)  
-   1.3 [커널과 사용자 모드](#13-커널과-사용자-모드)  
-2. [프로세스와 스레드](#2-프로세스와-스레드)  
-   2.1 [프로세스와 스레드의 차이](#21-프로세스와-스레드의-차이)  
-   2.2 [프로세스 스케줄링 알고리즘](#22-프로세스-스케줄링-알고리즘)  
-   2.3 [동기화 기법 및 경쟁 조건 해결](#23-동기화-기법-및-경쟁-조건-해결)  
-   2.4 [데드락 및 예방/회피 기법](#24-데드락-및-예방회피-기법)  
-3. [메모리 관리](#3-메모리-관리)  
-   3.1 [가상 메모리와 페이징](#31-가상-메모리와-페이징)  
-   3.2 [세그멘테이션 및 페이지 테이블](#32-세그멘테이션-및-페이지-테이블)  
-   3.3 [페이지 교체 알고리즘](#33-페이지-교체-알고리즘)  
-4. [파일 시스템 및 입출력](#4-파일-시스템-및-입출력)  
-   4.1 [파일 시스템의 구성요소](#41-파일-시스템의-구성요소)  
-   4.2 [디스크 스케줄링 및 I/O 최적화](#42-디스크-스케줄링-및-io-최적화)  
-   4.3 [버퍼링, 캐싱, 스풀링](#43-버퍼링-캐싱-스풀링)  
-5. [시스템 소프트웨어와 응용](#5-시스템-소프트웨어와-응용)  
-   5.1 [시스템 소프트웨어 vs 응용 소프트웨어](#51-시스템-소프트웨어-vs-응용-소프트웨어)  
-   5.2 [인터프리터, 컴파일러, 가상 머신](#52-인터프리터-컴파일러-가상-머신)  
-   5.3 [보안 및 자원 관리](#53-보안-및-자원-관리)  
-6. [Docker 및 컨테이너 기술](#6-docker-및-컨테이너-기술)  
-   6.1 [Docker 기본 개념 및 아키텍처](#61-docker-기본-개념-및-아키텍처)  
-   6.2 [Docker 설치 및 이미지/컨테이너 관리](#62-docker-설치-및-이미지컨테이너-관리)  
-   6.3 [Dockerfile 작성 및 최적화](#63-dockerfile-작성-및-최적화)  
-   6.4 [Docker Compose 및 Docker Desktop](#64-docker-compose-및-docker-desktop)  
-7. [시험 응시 전략 및 오픈북 활용법](#7-시험-응시-전략-및-오픈북-활용법)  
-   7.1 [자료 정리 및 인덱스 활용](#71-자료-정리-및-인덱스-활용)  
-   7.2 [시간 관리 및 문제 분석 전략](#72-시간-관리-및-문제-분석-전략)
+3. [단답형 문제]  
+문제: 파일의 **처음 5줄**만 출력하고 싶을 때 사용하는 명령어와 옵션은 무엇인가?  
+정답: `head -5 <파일명>` 명령을 사용하면 지정한 파일의 처음 5줄만 출력할 수 있습니다.
 
----
+4. [단답형 문제]  
+문제: 주어진 파일이 텍스트 파일인지, 실행 파일인지 등의 **파일 종류**를 확인해주는 리눅스 명령어는 무엇인가?  
+정답: `file` 명령어를 사용하면 파일의 유형과 속성을 확인할 수 있습니다. (예: `file example.txt`)
 
-## 1. 운영체제 기본 개념
+5. [개념 설명 문제]  
+문제: 쉘 스크립트의 첫 줄에 사용하는 **Shebang (`#!`)**의 역할은 무엇인가?  
+정답: Shebang(`#!`)은 스크립트를 실행할 때 사용할 **쉘 인터프리터를 지정**하는 역할을 합니다. 예를 들어 스크립트의 첫 줄에 `#!/bin/bash`를 넣으면 해당 스크립트가 **Bash 쉘**로 실행됩니다.
 
-### 1.1 운영체제의 정의와 역할
-**문제:** 운영체제(OS)의 정의와 주된 기능은 무엇인가?  
-**정답 예시:**  
-운영체제는 컴퓨터 하드웨어와 소프트웨어 간의 중개자 역할을 하며, 다음의 주요 기능들을 수행한다.  
-- **프로세스 관리:** 프로세스 생성, 스케줄링, 종료 등  
-- **메모리 관리:** 가상 메모리 제공, 메모리 보호, 할당 및 해제  
-- **파일 시스템 관리:** 파일 및 디렉터리 생성, 삭제, 수정, 권한 관리  
-- **I/O 시스템 관리:** 입출력 장치 제어 및 드라이버 제공  
-- **보안:** 사용자 인증, 권한 부여, 접근 통제  
-**해설:**  
-운영체제는 시스템 자원의 효율적 분배와 보호를 위해 필수적으로 요구되며, 사용자와 응용 프로그램이 하드웨어를 직접 제어하지 않도록 추상화 계층을 제공한다.
+6. [개념 설명 문제]  
+문제: 리눅스 쉘의 `if` 문은 어떻게 조건을 판단하여 분기하는가?  
+정답: `if` 문은 조건으로 주어진 **명령어의 종료 상태(exit status)**를 이용하여 분기합니다. 조건 명령어가 **성공하면(종료 상태 0)** `then` 블록을 실행하고, **실패하면(종료 상태가 0이 아님)** `then` 블록을 건너뜁니다.
 
-### 1.2 운영체제의 종류 및 비교
-**문제:** 일반 목적 OS, 실시간 OS, 분산 OS, 임베디드 OS의 특징을 비교하라.  
-**정답 예시:**  
-- **일반 목적 OS (Windows, Linux, macOS):**  
-  범용성을 가지고 있으며, 다양한 하드웨어와 응용 프로그램을 지원한다.  
-- **실시간 OS (VxWorks, QNX):**  
-  엄격한 시간 제어와 빠른 응답 시간이 필요하며, 주로 임베디드 및 산업용 시스템에서 사용된다.  
-- **분산 OS (Amoeba, Plan 9):**  
-  여러 컴퓨터 간 자원 공유 및 통합 관리를 지원하며, 확장성이 뛰어나다.  
-- **임베디드 OS (FreeRTOS, Embedded Linux):**  
-  제한된 자원 환경에 최적화되어 있으며, 경량화 및 맞춤형 기능을 제공한다.  
-**해설:**  
-각 OS는 사용 환경과 목적에 따라 설계되었으며, 시스템 요구사항에 맞춘 OS 선택이 매우 중요하다.
+7. [개념 설명 문제]  
+문제: **`test`** 명령어나 `[ ]` 조건식은 어떤 용도로 사용되는가?  
+정답: `test` 명령어(또는 `[ 조건식 ]` 구문)는 주어진 조건식을 평가하여 **참(true)인지 거짓(false)**인지를 판단하는데 사용됩니다. 조건이 참이면 종료 상태 0을 반환하고, 거짓이면 0이 아닌 값을 반환하여 쉘 스크립트의 `if` 문 등에서 조건 분기에 활용됩니다. (`[ ... ]`는 `test`와 동일한 기능을 하는 구문입니다.)
 
-### 1.3 커널과 사용자 모드
-**문제:** 커널 모드(Kernel Mode)와 사용자 모드(User Mode)의 차이점을 설명하라.  
-**정답 예시:**  
-- **커널 모드:**  
-  시스템 전체를 제어할 수 있는 높은 권한을 가지며, 하드웨어 및 모든 시스템 리소스에 접근 가능하다.  
-- **사용자 모드:**  
-  응용 프로그램이 실행되는 제한된 권한의 영역으로, 커널 모드에 비해 안전하지만 하드웨어 접근이 제한된다.  
-**해설:**  
-모드 간 전환에는 비용이 발생하며, 불필요한 전환을 줄이는 것이 시스템 성능 최적화의 핵심이다.
+8. [빈칸 채우기 문제]  
+문제: 다음 특수 변수들이 의미하는 바를 쓰시오.  
+1) 현재 실행 중인 스크립트의 **파일 이름**: ______  
+2) **위치 매개변수의 개수**(스크립트에 전달된 인자 개수): ______  
+3) 가장 최근에 실행한 명령어의 **종료 상태 코드**: ______  
+4) 현재 실행 중인 프로세스의 **PID**(프로세스 ID): ______  
+정답:  
+1) `$0`  
+2) `$#`  
+3) `$?`  
+4) `$$`  
 
----
+9. [빈칸 채우기 문제]  
+문제: `test` 명령어 또는 `[ ]` 조건식에서, **조건식이 참일 경우** 명령의 종료 상태는 ______이고, **거짓일 경우** 종료 상태는 ______이다.  
+정답: 조건이 **참이면 0**, **거짓이면 1**을 반환한다. (일반적으로 쉘에서 종료 상태 0은 성공/참을, 0이 아닌 값은 실패/거짓을 의미합니다.)
 
-## 2. 프로세스와 스레드
+10. [빈칸 채우기 문제]  
+문제: 다음 비교 연산자 또는 조건식을 채워 넣으시오.  
+1) 정수 X가 Y보다 **작으면** 참인 조건식: `X ______ Y`  
+2) 정수 X와 Y가 **같지 않으면** 참인 조건식: `X ______ Y`  
+3) 문자열 str1과 str2가 **동일하면** 참인 비교 연산자: `str1 ______ str2` (쉘 `[ ]` 문법 기준)  
+4) 문자열 str의 길이가 **0이면** 참인 조건식: `______ str`  
+정답:  
+1) `-lt` (예: `[ "$X" -lt "$Y" ]`)  
+2) `-ne` (예: `[ "$X" -ne "$Y" ]`)  
+3) `=`  (또는 `==`; 예: `[ "$str1" = "$str2" ]`)  
+4) `-z` (예: `[ -z "$str" ]`)
 
-### 2.1 프로세스와 스레드의 차이
-**문제:** 프로세스와 스레드의 차이점을 기술하라.  
-**정답 예시:**  
-- **프로세스:**  
-  독립된 실행 단위로, 고유한 주소 공간과 자원(메모리, 파일 등)을 보유한다.  
-- **스레드:**  
-  프로세스 내에서 실행되는 경량 단위로, 동일 주소 공간을 공유하며 빠른 생성 및 전환이 가능하다.  
-**해설:**  
-프로세스 간 통신(IPC)은 복잡하고 비용이 크지만, 스레드 간 통신은 상대적으로 효율적이나 동기화 문제에 유의해야 한다.
+11. [코드 분석 문제]  
+문제: 다음은 인자로 전달된 파일의 접근 가능 여부를 검사하는 스크립트 일부이다. `"File $1 is not accessible"` 메시지가 출력되고 스크립트가 종료되는 경우는 어떤 상황인가?  
+```bash
+if [[ ! -f "$1" || ! -r "$1" || ! -w "$1" ]]; then
+    echo "File $1 is not accessible"
+    exit 1
+fi
+```  
+정답: 위 조건식은 **인자로 받은 `$1` 파일이** “일반 파일이 아니거나(`-f` 조건 실패) **읽기 가능하지 않거나(`-r` 실패) 쓰기 가능하지 않은 경우**”를 체크합니다. 이 세 조건 중 하나라도 참이면 (즉 파일이 존재하지 않거나, 디렉터리이거나, 존재하지만 읽기/쓰기가 불가능하면) `"File $1 is not accessible"`라는 메시지를 출력하고 `exit 1`로 스크립트를 종료합니다.
 
-### 2.2 프로세스 스케줄링 알고리즘
-**문제:** FCFS, SJF, RR, Priority 스케줄링 알고리즘의 원리와 장단점을 비교하라.  
-**정답 예시:**  
-- **FCFS (First Come First Served):**  
-  도착 순서대로 실행하므로 구현이 간단하지만, 긴 프로세스가 전체 대기 시간을 늘릴 수 있다.  
-- **SJF (Shortest Job First):**  
-  실행 시간이 짧은 프로세스를 우선 처리하여 평균 대기 시간을 최소화하나, 실행 시간이 예측하기 어려운 경우 문제가 발생할 수 있다.  
-- **RR (Round Robin):**  
-  각 프로세스에게 균등한 시간 할당(타임 슬라이스)을 통해 공평한 실행을 보장하지만, 타임 슬라이스가 너무 짧으면 문맥 전환 오버헤드가 커진다.  
-- **Priority:**  
-  우선순위에 따라 처리하므로 중요한 작업을 먼저 처리할 수 있으나, 낮은 우선순위 프로세스가 기아 상태에 빠질 위험이 있다.  
-**해설:**  
-각 알고리즘은 시스템의 특성과 업무 부하에 따라 선택되어야 하며, 장단점을 종합적으로 고려한 답변이 요구된다.
+12. [단답형 문제]  
+문제: **쉘 스크립트의 `if` 조건식**을 작성하는 여러 가지 방법 중 두 가지를 예를 들어 쓰시오.  
+정답: 쉘에서 if 조건을 표현하는 방법으로는 `[ ... ]` 형태와 `[[ ... ]]` 형태 두 가지가 있습니다. 예를 들어:  
+- `if [ "$VAR" = "Y" ]; then ... fi`  
+- `if [[ "$VAR" = "Y" ]]; then ... fi`  
+이 두 방법은 기본적으로 동일한 역할을 하며 (`[[ ]]`는 Bash에서 확장된 기능을 제공), 또는 `test "$VAR" = "Y"`를 사용하는 방법도 있습니다.
 
-### 2.3 동기화 기법 및 경쟁 조건 해결
-**문제:** 뮤텍스, 세마포어, 모니터, 조건 변수의 차이와 사용 사례를 설명하라.  
-**정답 예시:**  
-- **뮤텍스:** 단일 임계 구역에 대한 상호 배제를 제공하며, 한 번에 하나의 스레드만 접근할 수 있게 한다.  
-- **세마포어:** 정수 카운트를 활용하여 여러 스레드가 동시에 제한된 자원에 접근할 수 있게 제어한다.  
-- **모니터:** 객체 지향 방식의 동기화로, 내부적으로 뮤텍스와 조건 변수를 포함하여 관리하며, 메서드 단위로 동기화를 지원한다.  
-- **조건 변수:** 특정 조건이 만족될 때까지 스레드를 대기시키고, 조건이 충족되면 신호를 보내어 대기 중인 스레드를 깨운다.  
-**해설:**  
-각 동기화 기법은 특정 상황에 맞게 사용되며, 경쟁 조건(race condition) 문제 해결에 필수적인 역할을 한다.
+13. [개념 설명 문제]  
+문제: **`case` 문**은 어떤 상황에서 유용하며, 기본 구조는 어떻게 되는지 설명하시오.  
+정답: `case` 문은 하나의 변수 값에 대해 **여러 패턴별로 분기**시킬 때 유용하며, 복잡한 다중 `if-elif-else`문을 대체하여 가독성을 높여줍니다. 기본 구조는 다음과 같습니다.  
+```bash
+case 값 in  
+    패턴1) 명령들 ;;  
+    패턴2) 명령들 ;;  
+    ...  
+    *) 명령들 ;;  
+esac
+```  
+주어진 값이 각 패턴과 순서대로 비교되어, 일치하는 패턴의 명령들이 실행됩니다. (`*)`는 어떤 패턴에도 맞지 않을 경우 실행되는 기본 분기입니다.)
 
-### 2.4 데드락 및 예방/회피 기법
-**문제:** 데드락의 4가지 발생 조건과 이를 예방하거나 회피하는 방법을 설명하라.  
-**정답 예시:**  
-데드락의 발생 조건은 다음과 같다.  
-1. **상호 배제:** 자원은 한 번에 한 프로세스만 사용할 수 있다.  
-2. **점유와 대기:** 한 프로세스가 자원을 점유한 채 다른 자원을 요청한다.  
-3. **비선점:** 자원이 강제로 회수될 수 없다.  
-4. **순환 대기:** 자원 할당 요청이 순환 구조를 이룬다.  
-예방/회피 방법으로는 자원 할당 순서를 미리 정하거나, 은행가 알고리즘을 통해 안전 상태 여부를 확인하는 방식 등이 있다.  
-**해설:**  
-데드락 해결 방법은 시스템 설계 단계부터 고려되어야 하며, 예방과 회피 기법의 선택은 시스템의 요구사항에 따라 달라진다.
+14. [비교 설명 문제]  
+문제: Bash에서 **`while` 루프**와 **`until` 루프**의 동작 차이를 비교하여 설명하시오.  
+정답: `while` 루프는 주어진 **조건식이 참(`true`)인 동안** 반복 실행합니다. 즉, 처음부터 조건이 참이면 루프 본문을 실행하고 조건이 거짓이 되면 종료합니다. 반면 `until` 루프는 **조건식이 거짓(`false`)인 동안** 반복 실행합니다. 즉, 처음에 조건이 거짓이어야 본문을 실행하고, 조건이 참이 되는 순간 루프를 종료합니다. 쉽게 말해 **`while`은 조건이 참인 동안 수행**하고, **`until`은 조건이 참이 될 때까지 수행**하는 차이가 있습니다.
 
----
+15. [코드 분석 문제]  
+문제: 다음 스크립트는 사용자 입력에 따라 반복을 제어합니다. 이 스크립트의 동작을 단계별로 설명하시오.  
+```bash
+#!/bin/bash
+Cont="Y"
+while [ "$Cont" = "Y" ]; do
+    ps -A
+    read -p "Want to continue? (Y/N) " reply
+    Cont=$(echo "$reply" | tr '[:lower:]' '[:upper:]')
+done
+echo "Done"
+```  
+정답: 이 스크립트는 **현재 실행 중인 모든 프로세스 목록**을 `ps -A`로 출력한 후 사용자가 계속 진행할지 묻습니다. `Cont="Y"`로 초기화해 `while` 루프에 들어가고, 루프 내부에서:  
+- 현재 실행 중인 프로세스를 표시합니다.  
+- `"Want to continue? (Y/N)"` 프롬프트를 표시하고 사용자의 입력을 `reply` 변수에 받습니다.  
+- 입력값을 소문자를 대문자로 변환하여 `Cont` 변수에 저장합니다 (`Y`나 `N` 등 대소문자 구분 없이 처리하기 위해).  
+그 후 `while` 조건으로 돌아가 `Cont`가 `"Y"`이면 루프를 계속하고, `"Y"`가 아니면(`N` 등) 루프를 종료합니다. 사용자가 `N`을 입력하여 `Cont`가 `"Y"`가 아니게 되면 루프를 빠져나와 마지막에 `"Done"`을 출력하고 스크립트를 끝냅니다.
 
-## 3. 메모리 관리
+16. [코드 분석 문제]  
+문제: 다음 스크립트를 실행했을 때 출력되는 결과를 순서대로 쓰시오. (각 `echo` 문에서 무엇이 출력되는지 나열)  
+```bash
+#!/bin/bash
+for index in 1 2 3 4 5 6 7 8 9 10; do
+    if [ "$index" -le 3 ]; then
+        echo "continue"
+        continue
+    fi
+    echo "$index"
+    if [ "$index" -ge 8" ]; then
+        echo "break"
+        break
+    fi
+done
+```  
+정답: 위 스크립트는 `index` 변수가 1부터 10까지 순회합니다. 출력 결과는 조건에 따라 다음과 같이 나타납니다.  
+- `index` = 1, 2, 3일 때: if 조건에 의해 `"continue"`만 출력되고, `continue`문으로 아래 `echo`들을 건너뛰어 다음 반복으로 넘어갑니다. 따라서 **세 번 모두 "continue"**가 출력됩니다.  
+- `index` = 4, 5, 6, 7일 때: 1~3이 아닌 경우이므로 첫 번째 if를 통과하여 `echo "$index"`가 실행됩니다. 각각 **4, 5, 6, 7**이 출력됩니다. (이때 `index`가 8 미만이어서 두 번째 if의 조건 `-ge 8`은 거짓이므로 `break`는 출력되지 않고 계속 반복)  
+- `index` = 8일 때: 첫 번째 if를 통과하여 **`8`**을 출력한 뒤, 두 번째 if 조건 `$index -ge 8`가 참이므로 `"break"`를 출력하고 `break`로 루프를 종료합니다.  
+- `index` = 9, 10은 실행되지 않습니다 (이미 루프 종료).  
 
-### 3.1 가상 메모리와 페이징
-**문제:** 가상 메모리의 개념과 페이징 기법의 장단점을 설명하라.  
-**정답 예시:**  
-가상 메모리는 실제 물리 메모리보다 큰 메모리 공간을 제공하여 프로세스 간 격리와 보호를 가능하게 하는 기법이다.  
-**페이징:** 메모리를 고정 크기의 페이지로 분할하여 관리함으로써 외부 단편화를 줄이고, 페이지 교체 기법을 통해 효율적으로 메모리 사용을 최적화한다.  
-- **장점:** 외부 단편화 제거, 메모리 관리 단순화  
-- **단점:** 페이지 테이블 관리 비용, 내부 단편화 발생 가능  
-**해설:**  
-페이징과 가상 메모리는 현대 운영체제에서 필수적인 개념이며, 페이지 교체 알고리즘과 함께 이해해야 한다.
+종합하면 출력 순서는:  
+```
+continue  
+continue  
+continue  
+4  
+5  
+6  
+7  
+8  
+break
+```
 
-### 3.2 세그멘테이션 및 페이지 테이블
-**문제:** 세그멘테이션과 페이지 테이블의 차이 및 장단점을 서술하라.  
-**정답 예시:**  
-- **세그멘테이션:** 프로그램을 논리적 단위(코드, 데이터, 스택 등)로 분할하나, 가변 크기 때문에 내부 단편화가 발생할 수 있다.  
-- **페이지 테이블:** 메모리를 고정 크기 페이지 단위로 관리하여 관리가 용이하며 다단계 페이지 테이블 등으로 메모리 사용을 최적화할 수 있다.  
-**해설:**  
-두 기법은 상호 보완적인 역할을 하며, 현대 시스템에서는 세그먼트-페이지 기법을 혼합하여 사용하기도 한다.
+17. [단답형 문제]  
+문제: Bash에서 **함수를 정의**하는 기본 구문을 작성하시오. (함수 이름은 `myfunc`로 예시)  
+정답: 
+```bash
+myfunc() {
+    명령어들
+}
+```  
+위와 같이 함수이름 뒤에 `()`를 쓰고 중괄호 블록 `{ }` 안에 수행할 명령어들을 넣어서 함수를 정의합니다. 정의한 함수는 나중에 `myfunc` 처럼 이름을 호출하여 실행할 수 있습니다.
 
-### 3.3 페이지 교체 알고리즘
-**문제:** FIFO, LRU, Optimal 페이지 교체 알고리즘의 원리와 성능 비교를 하라.  
-**정답 예시:**  
-- **FIFO:** 가장 먼저 들어온 페이지를 제거하는 방식으로, 간단하지만 항상 최적의 선택은 아니다.  
-- **LRU:** 최근에 사용되지 않은 페이지를 제거하며, 실제 상황에서 성능이 우수하나 구현 비용이 높다.  
-- **Optimal:** 미래 참조 정보를 기준으로 최적의 페이지를 선택하는 이상적인 모델이나, 실제 구현은 불가능하다.  
-**해설:**  
-각 알고리즘은 시스템 환경에 따라 장단점이 있으므로, 평균 페이지 부재율 등의 성능 지표를 통해 평가한다.
+18. [개념 설명 문제]  
+문제: Bash 함수 내에서 변수를 선언할 때 `local` 키워드를 사용하는 이유는 무엇인가?  
+정답: 기본적으로 Bash에서 함수 내에서 선언한 변수는 **전역 변수**로 간주되어 함수 종료 후에도 값이 유지됩니다. `local` 키워드를 붙여 변수를 선언하면 **해당 함수 내부에서만 유효한 지역 변수**가 되어 함수가 끝나면 자동으로 소멸하거나 함수 밖에 영향을 주지 않습니다. 따라서 함수 실행이 외부 환경의 변수에 미치는 영향을 피하기 위해 `local`을 사용합니다.
 
----
+19. [서술형 문제]  
+문제: **가상화(Virtualization)**란 무엇이며, 이를 통해 얻을 수 있는 이점은 무엇인지 설명하시오.  
+정답: 가상화는 하나의 물리적 하드웨어 시스템을 여러 개의 **논리적 가상 환경**으로 분할하여 사용하는 기술입니다. 예를 들어 한 대의 서버에서 여러 개의 가상 머신이나 컨테이너를 실행하여 **서로 격리된 환경**을 구축할 수 있습니다. 이를 통해 **하드웨어 자원 활용도를 극대화**하고, 시스템 배치를 유연하게 하며, 물리 장비를 줄여 **비용 절감**과 **관리 효율성 향상**의 이점을 얻을 수 있습니다. 또한 애플리케이션을 서로 격리시켜 **보안성과 안정성**을 높일 수 있다는 장점도 있습니다.
 
-## 4. 파일 시스템 및 입출력
+20. [개념 설명 문제]  
+문제: 컴퓨터 시스템의 **링 보호(Protection Ring)** 모델에서 **링0**와 **링3**는 무엇이며, 각각 어떤 모드로 동작하는지를 설명하시오.  
+정답: 링 보호 모델에서 **링0**는 가장 권한이 높은 **커널 모드(혹은 슈퍼바이저 모드)**를 의미합니다. 운영체제의 핵심 부분이 링0에서 실행되며, 하드웨어 자원에 직접 접근할 수 있습니다. 반면 **링3**는 제한된 권한의 **사용자 모드**로서 일반 응용 프로그램이 실행되는 영역입니다. 사용자 모드에서는 직접 하드웨어에 접근할 수 없으며, 필요한 경우 **시스템 콜**을 통해 링0에 요청을 보내 커널의 기능을 이용합니다. 이렇게 링0과 링3으로 권한을 구분하여 시스템의 **안정성과 보안**을 유지합니다.
 
-### 4.1 파일 시스템의 구성요소
-**문제:** 파일 시스템의 주요 구성요소(디렉터리, inode, 파일 할당 테이블 등)를 서술하라.  
-**정답 예시:**  
-파일 시스템은 데이터를 효율적으로 저장하고 관리하는 체계이며, 주요 요소는 다음과 같다.  
-- **디렉터리:** 파일들의 조직과 구조를 결정  
-- **inode:** 파일의 메타데이터(크기, 권한, 생성/수정 시간 등)를 저장  
-- **파일 할당 테이블:** 파일이 저장된 물리 블록의 위치 정보 관리  
-**해설:**  
-이들 구성요소는 파일 시스템의 성능 및 안정성, 그리고 보안 측면에 큰 영향을 미친다.
+21. [단답형 문제]  
+문제: **사용자 모드(링3)**에서 **커널 모드(링0)**의 기능을 사용하기 위해 호출해야 하는 것은 무엇인가?  
+정답: **시스템 콜(System Call)**을 호출해야 합니다. 시스템 콜은 사용자 모드 프로그램이 커널의 기능을 요청할 때 사용되는 인터페이스로, 이를 통해 링3에서 링0로 모드 전환이 이루어집니다.
 
-### 4.2 디스크 스케줄링 및 I/O 최적화
-**문제:** SSTF, SCAN, C-SCAN 등의 디스크 스케줄링 알고리즘의 원리와 차이점을 설명하라.  
-**정답 예시:**  
-- **SSTF (Shortest Seek Time First):** 현재 헤드에서 가장 가까운 요청을 먼저 처리하여 응답 시간을 단축하지만, 편향성이 발생할 수 있다.  
-- **SCAN:** 헤드가 한 방향으로 이동하며 모든 요청을 처리하고 끝에 도달하면 반대로 이동하는 방식으로, 공평성을 제공한다.  
-- **C-SCAN:** 한쪽 끝에서만 요청을 처리한 후 초기 위치로 바로 돌아가는 방식으로, 평균 응답 시간을 낮춘다.  
-**해설:**  
-각 스케줄링 방식은 디스크 I/O 성능 최적화와 관련하여 서로 다른 특징과 trade-off를 가진다.
+22. [개념 설명 문제]  
+문제: **하이퍼바이저(Hypervisor)**의 역할은 무엇인가?  
+정답: 하이퍼바이저는 물리적인 호스트 머신 위에서 동작하면서 **가상 머신(VM)**들을 생성하고 관리하는 소프트웨어 계층입니다. 하이퍼바이저는 가상 머신들이 **하드웨어 자원을 공유하여 사용할 수 있도록 중재**하며, 각 VM이 서로 **격리된 채로 실행**되도록 합니다. 즉, 하드웨어의 CPU, 메모리, 디스크, 네트워크 자원 등을 가상 머신들에게 적절히 할당하고 스케줄링하여, **여러 운영체제가 한 물리 서버에서 동시에 구동**될 수 있게 해주는 역할을 합니다.
 
-### 4.3 버퍼링, 캐싱, 스풀링
-**문제:** 버퍼링, 캐싱, 스풀링이 I/O 성능 향상에 어떻게 기여하는지 설명하라.  
-**정답 예시:**  
-- **버퍼링:** 입출력 장치와 시스템 간의 속도 차이를 보완하기 위해 임시 저장 공간(버퍼)을 사용.  
-- **캐싱:** 자주 사용되는 데이터를 고속 메모리(캐시)에 저장하여 접근 속도를 개선.  
-- **스풀링:** 여러 I/O 요청을 순차적으로 처리할 수 있도록 작업을 큐(스풀)에 저장 후 순차 처리.  
-**해설:**  
-이 기법들은 I/O 병목현상을 완화하고, 시스템 응답성과 처리율을 크게 향상시킨다.
+23. [비교 설명 문제]  
+문제: **전 가상화(Full Virtualization)**와 **반 가상화(Para-Virtualization)**의 차이를 비교하여 설명하시오.  
+정답: **전 가상화**는 Guest 운영체제를 수정하지 않고 그대로 가상 환경에서 실행하는 방식입니다. Guest OS가 **자신이 가상화된 환경인지 모르므로** 하이퍼바이저가 **바이너리 변환(Binary Translation)** 등의 기술을 통해 Guest OS의 특권 명령을 가로채서 처리합니다. 이 방식은 **호환성**이 높아 기존 OS를 그대로 사용할 수 있지만, 변환 작업으로 인해 **성능 저하**가 일부 발생할 수 있습니다.  
+**반 가상화**는 Guest OS를 가상화에 맞게 **일부 수정**하여, 운영체제가 가상화된 것을 인지하고 **하이퍼콜(Hypercall)**이라는 인터페이스로 하이퍼바이저와 직접 통신하는 방식입니다. Guest OS가 특권 작업을 할 때 하이퍼콜을 사용하므로 변환 과정이 필요 없어서 **전 가상화보다 성능이 향상**되지만, Guest OS의 **커널 코드를 수정**해야 한다는 단점이 있습니다.
 
----
+24. [개념 설명 문제]  
+문제: Intel VT-x나 AMD-V와 같은 **하드웨어 가상화 지원 기술**이 도입됨으로써 얻은 주요 효과는 무엇인가?  
+정답: Intel VT-x, AMD-V 등 CPU의 하드웨어 가상화 지원 기술을 통해 하이퍼바이저는 가상 머신을 더 효율적으로 실행할 수 있게 되었습니다. 구체적으로, 과거 전 가상화에서는 하드웨어 접근을 에뮬레이션해야 해서 오버헤드가 있었지만, **하드웨어 가상화 지원은 Guest OS가 실제 링0에 준하는 환경에서 실행**될 수 있도록 해줌으로써 **가상화 성능을 크게 향상**시켰습니다. 예를 들어, **KVM**과 같은 최신 하이퍼바이저는 이러한 하드웨어 지원을 활용하여 전 가상화 대비 거의 **네이티브에 가까운 속도**를 제공합니다.
 
-## 5. 시스템 소프트웨어와 응용
+25. [비교 설명 문제]  
+문제: **Type 1 하이퍼바이저**와 **Type 2 하이퍼바이저**의 차이를 설명하시오.  
+정답: **Type 1 하이퍼바이저(베어메탈 하이퍼바이저)**는 **호스트 운영체제 없이** 하드웨어 위에서 직접 동작하는 하이퍼바이저입니다. 물리 서버에 바로 설치되어 동작하므로 **오버헤드가 적고 성능과 안정성이 높으며**, 주로 데이터센터 등에서 쓰입니다. 예시로 VMware ESXi, Microsoft Hyper-V, Xen, KVM 등이 Type 1에 속합니다.  
+**Type 2 하이퍼바이저(호스티드 하이퍼바이저)**는 일반 애플리케이션처럼 **호스트 운영체제 위에서 동작**합니다. 즉, 이미 동작중인 OS(예: Windows, Linux)상에서 소프트웨어로 실행되는 가상화 솔루션입니다. 설치와 사용이 비교적 간편하며 주로 **개발/테스트 목적**에 적합하지만, 호스트 OS를 거치므로 Type 1에 비해 **성능 면에서 약간의 오버헤드**가 있습니다. 예시로 Oracle VirtualBox, VMware Workstation/Fusion, Parallels 등이 Type 2에 속합니다.
 
-### 5.1 시스템 소프트웨어 vs 응용 소프트웨어
-**문제:** 시스템 소프트웨어와 응용 소프트웨어 간의 차이와 상호 의존성을 설명하라.  
-**정답 예시:**  
-시스템 소프트웨어는 하드웨어 제어, 자원 관리, 보안 및 인터페이스 제공을 담당하며, 응용 소프트웨어는 시스템 소프트웨어 위에서 특정 사용자 요구 사항을 해결하는 프로그램들이다. 시스템 소프트웨어가 안정적으로 작동해야 응용 소프트웨어도 올바르게 실행된다.  
-**해설:**  
-각 계층의 역할 분담과 의존 관계를 이해하면, 시스템 설계 및 문제 해결에 큰 도움이 된다.
+26. [단답형 문제]  
+문제: **Xen 가상화**에서 **Dom0**와 **DomU**는 무엇을 의미하는가?  
+정답: **Dom0**는 Xen 하이퍼바이저 환경에서 **특권 도메인(관리 OS)**을 의미합니다. 시스템 부팅 시 가장 먼저 실행되는 VM으로, 하이퍼바이저와 통신하며 **새로운 가상 머신 생성, 자원 할당, I/O 관리 등 전체 가상화 시스템을 제어**하는 역할을 합니다.  
+**DomU**는 **일반 도메인(Guest OS)**으로, 사용자가 실행하는 일반 가상 머신들을 가리킵니다. DomU에는 특권이 없으며, 각각 하나의 Guest 운영체제가 실행되어 실제 애플리케이션을 수행하는 가상 환경입니다. (Dom0가 이러한 DomU들을 관리합니다.)
 
-### 5.2 인터프리터, 컴파일러, 가상 머신
-**문제:** 인터프리터와 컴파일러의 차이, 그리고 가상 머신의 역할을 기술하라.  
-**정답 예시:**  
-- **컴파일러:** 전체 소스 코드를 기계어로 변환하여 실행 파일을 생성, 실행 속도가 빠르지만 디버깅이 어려울 수 있음.  
-- **인터프리터:** 소스 코드를 한 줄씩 해석하면서 실행, 디버깅에 유리하지만 실행 속도가 상대적으로 느림.  
-- **가상 머신:** 플랫폼 독립적인 실행 환경을 제공하여 소스 코드의 이식성을 높이며, 예) Java Virtual Machine.  
-**해설:**  
-각 기술의 특성을 비교하고, 개발 환경에서 장단점이 어떻게 반영되는지 이해해야 한다.
+27. [개념 설명 문제]  
+문제: **KVM**(Kernel-based Virtual Machine)의 주요 특징을 설명하시오.  
+정답: KVM은 리눅스 커널에 하이퍼바이저 기능을 추가한 가상화 기술로, **리눅스 자체를 Type 1 하이퍼바이저로 전환**합니다. KVM 모듈을 커널에 적재하면 각 가상 머신이 **리눅스 프로세스 형태**로 실행되며, Intel VT-x 또는 AMD-V와 같은 **하드웨어 가상화 지원 기술**을 활용하여 높은 성능을 냅니다. 장치 가상화는 QEMU라는 사용자 공간 프로그램을 통해 처리하며, 예를 들어 디스크, 네트워크, USB 등의 I/O를 에뮬레이션합니다. 결과적으로 KVM 환경에서는 각 VM이 `qemu-kvm` 프로세스로 실행되고, 리눅스의 스케줄러에 의해 관리되는 등 리눅스에 자연스럽게 통합되는 구조가 특징입니다.
 
-### 5.3 보안 및 자원 관리
-**문제:** 시스템 소프트웨어 관점에서 보안과 자원 관리가 왜 중요한지를 사례와 함께 서술하라.  
-**정답 예시:**  
-보안과 자원 관리는 시스템의 안정성과 신뢰성을 보장하는 근간이다. 예를 들어, 메모리 보호가 없다면 악의적인 코드가 다른 프로세스의 메모리에 접근할 수 있고, 잘못된 자원 분배는 성능 저하와 시스템 충돌을 야기할 수 있다.  
-**해설:**  
-실제 보안 취약점 사례나 자원 경쟁 문제를 들어 설명하면, 답변의 신뢰도를 높일 수 있다.
+28. [비교 설명 문제]  
+문제: **컨테이너(Container) 가상화**와 전통적인 **가상 머신(VM) 기반 가상화**의 차이를 설명하시오.  
+정답: 컨테이너 가상화는 **단일 운영체제 커널** 위에서 격리된 여러 환경을 실행하는 **경량 가상화**입니다. 컨테이너들은 호스트 OS의 커널을 공동으로 사용하면서 프로세스, 파일시스템, 네트워크 등을 **네임스페이스와 cgroups**로 격리하므로, **시작 속도가 빠르고 자원 오버헤드가 적습니다.** 다만 모든 컨테이너는 호스트와 **같은 OS 커널**을 공유하므로 **서로 다른 종류의 OS를 동시에 실행할 수는 없습니다.**  
+반면 전통적인 VM 가상화는 하이퍼바이저를 통해 **각 VM마다 자체 OS 커널**을 갖고 실행되는 방식입니다. 각 VM은 완전한 운영체제를 포함하므로 **격리 수준이 높고 다양한 OS를 동시에 운용**가능하지만, 그만큼 **무겁고 부팅 시간이나 자원 소모가 더 큽니다.** 즉, **컨테이너는 경량화된 프로세스 격리**이고 **VM은 완전한 하드웨어 가상화**로 구분됩니다.
 
----
+29. [개념 설명 문제]  
+문제: **Docker**란 무엇이며, 어떤 문제를 해결하기 위해 등장한 기술인가?  
+정답: Docker는 애플리케이션을 컨테이너라는 단위로 패키징하여 배포하고 실행할 수 있게 해주는 **오픈소스 컨테이너 플랫폼**입니다. 컨테이너화 기술을 통해 애플리케이션 실행에 필요한 코드, 라이브러리, 설정 등을 하나의 이미지로 묶어 배포함으로써, **환경 차이에 상관없이 어디서나 동일하게 동작**하도록 해줍니다. 이로써 전통적으로 발생하던 “개발 환경에서는 되는데 운영 환경에서는 안 된다”와 같은 **이식성(Portability)** 문제를 해결하며, 가상 머신보다 적은 자원으로 **경량** 실행이 가능하여 효율성을 높입니다.
 
-## 6. Docker 및 컨테이너 기술
+30. [서술형 문제]  
+문제: Docker의 **아키텍처**는 클라이언트-서버 모델로 구성되어 있습니다. Docker 아키텍처의 주요 구성 요소를 설명하시오.  
+정답: Docker는 클라이언트-서버 구조로 동작합니다.  
+- **Docker Client(클라이언트)**: 사용자가 Docker에게 명령을 내리는 인터페이스입니다. 터미널에서 `docker run`, `docker build` 등의 명령을 입력하면, Docker Client가 해당 명령을 Docker Daemon에 전달합니다.  
+- **Docker Daemon(데몬)**: `dockerd`라는 백그라운드 프로세스로 실행되며, 실제로 컨테이너를 관리하고 이미지 빌드 등을 수행하는 핵심 서비스입니다. 클라이언트로부터 명령을 받아 컨테이너를 실행하거나 중지하고, 이미지를 빌드하는 등의 작업을 처리합니다.  
+- **Docker Registry(레지스트리)**: Docker 이미지들을 저장하고 배포하는 저장소입니다. Docker Hub 같은 공개 레지스트리가 대표적이며, 사용자는 `docker pull`로 레지스트리에서 이미지를 받아오거나 `docker push`로 이미지를 등록할 수 있습니다.  
+이 외에도 Docker 아키텍처의 핵심 개념으로 **이미지(Image)**와 **컨테이너(Container)**가 있습니다. 이미지는 애플리케이션 환경을 캡슐화한 불변의 템플릿이고, 컨테이너는 해당 이미지를 실행한 **실행 중인 인스턴스**입니다. 또한 데이터 저장을 위한 **볼륨(Volume)**, 컨테이너 간 네트워크를 위한 **네트워크(Network)** 구성 요소도 Docker의 아키텍처에서 중요한 부분입니다.
 
-### 6.1 Docker 기본 개념 및 아키텍처
-**문제:** Docker의 주요 구성요소와 클라이언트-서버 아키텍처를 설명하라.  
-**정답 예시:**  
-Docker는 컨테이너화 플랫폼으로서,  
-- **Docker Client:** 사용자 명령어(예: docker build, docker run)를 입력받아 처리 요청  
-- **Docker Daemon (dockerd):** 명령어를 처리하고 컨테이너를 생성, 관리  
-- **Docker Registry/Hub:** Docker 이미지를 저장, 배포하는 중앙 저장소  
-이러한 구조는 기존의 가상 머신보다 경량화되어 빠른 배포와 높은 자원 효율성을 제공한다.  
-**해설:**  
-Docker의 기본 철학과 컨테이너 기술이 제공하는 이점을 중심으로 서술한다.
+31. [비교 설명 문제]  
+문제: **Docker 이미지(Image)**와 **Docker 컨테이너(Container)**의 차이를 설명하시오.  
+정답: Docker 이미지는 애플리케이션 실행에 필요한 모든 것(코드, 라이브러리, 환경 설정 등)을 포함한 **읽기 전용 템플릿**입니다. 이미지는 변하지 않는 상태로서 컨테이너를 생성하는 데 사용되며, 하나의 이미지로부터 여러 컨테이너를 만들 수 있습니다.  
+Docker 컨테이너는 이 이미지를 기반으로 **실행 중인 인스턴스**를 말합니다. 컨테이너는 이미지의 내용을 복사하여 동작하면서, 추가로 **읽기/쓰기 레이어**를 가져 실행 중 변경되는 데이터나 상태를 관리합니다. 쉽게 말해, **이미지는 프로그램의 청사진**, **컨테이너는 그 청사진으로 실행된 프로세스**라고 볼 수 있습니다.
 
-### 6.2 Docker 설치 및 이미지/컨테이너 관리
-**문제:** Ubuntu 환경에서 Docker를 설치하고, 이미지를 빌드 및 컨테이너를 실행하는 절차를 설명하라.  
-**정답 예시:**  
-1. **Docker 설치:**  
-   ```bash
-   apt-get update
-   sudo apt-get install apt-transport-https ca-certificates curl software-properties-common
-   curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-   sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-   sudo apt-get install docker-ce
-   ```  
-2. **이미지 빌드:**  
-   ```bash
-   docker build -t my-app:1.0 .
-   ```  
-3. **컨테이너 실행:**  
-   ```bash
-   docker run -d -p 80:80 my-app:1.0
-   ```  
-**해설:**  
-설치 시 발생할 수 있는 문제점과 해결 방안을 함께 서술하면 좋다.
+32. [빈칸 채우기 문제]  
+문제: 다음은 Dockerfile의 일부이다. 각 줄에서 사용된 Dockerfile 명령어의 역할을 간략히 쓰시오.  
+```dockerfile
+FROM ubuntu:22.04  
+...  
+COPY . .  
+...  
+EXPOSE 80  
+...  
+CMD ["nginx", "-g", "daemon off;"]
+```  
+정답:  
+- `FROM`: 기반으로 사용할 **베이스 이미지를 지정**합니다 (위 예에서는 Ubuntu 22.04 이미지를 기반으로 함).  
+- `COPY`: 호스트의 파일이나 디렉토리를 이미지 내로 **복사**합니다 (여기서는 현재 디렉터리의 모든 내용 `.`을 이미지의 작업 디렉터리 `.`로 복사).  
+- `EXPOSE`: 컨테이너가 실행 중 외부에 **노출할 포트**를 지정합니다 (예에서는 컨테이너의 80번 포트를 개방).  
+- `CMD`: 컨테이너가 시작될 때 **기본으로 실행할 명령어**를 지정합니다 (예에서는 Nginx 웹서버를 포어그라운드 모드로 실행).
 
-### 6.3 Dockerfile 작성 및 최적화
-**문제:** Dockerfile의 주요 명령어와 함께, 이미지 빌드 최적화를 위한 베스트 프랙티스를 서술하라.  
-**정답 예시:**  
-주요 명령어는 `FROM`, `RUN`, `COPY`, `ENV`, `EXPOSE`, `CMD` 등이며,  
-- **최적화 방안:**  
-  - 불필요한 파일을 제외하기 위해 `.dockerignore` 사용  
-  - 가능한 최소한의 베이스 이미지(예: Alpine) 사용  
-  - 여러 `RUN` 명령어를 하나로 결합하여 이미지 레이어 수를 최소화  
-  - 변하지 않는 파일은 먼저 복사하여 캐시 활용 극대화  
-**해설:**  
-이미지 크기 감소와 빌드 시간 단축, 보안 개선의 측면에서 최적화 중요성을 강조한다.
+33. [단답형 문제]  
+문제: `docker run` 명령으로 컨테이너를 실행할 때, **백그라운드(detach) 모드**로 실행하고 **호스트의 포트 8080을 컨테이너의 80번 포트**와 연결하려면 어떤 옵션을 사용해야 하는가?  
+정답: `-d` 옵션을 사용하면 **백그라운드 실행**(detached mode)이고, `-p 8080:80` 옵션을 사용하면 **포트 매핑**(호스트의 8080 → 컨테이너의 80)입니다. 예를 들어:  
+```bash
+docker run -d -p 8080:80 <이미지이름>
+```  
+와 같이 사용합니다.
 
-### 6.4 Docker Compose 및 Docker Desktop
-**문제:** Docker Compose를 활용한 다중 컨테이너 구성 방법과 Docker Desktop의 장단점을 비교하라.  
-**정답 예시:**  
-- **Docker Compose:**  
-  여러 서비스를 하나의 YAML 파일(`docker-compose.yml`)에 정의하고,  
-  ```yaml
-  version: '3'
-  services:
-    web:
-      image: nginx
-      ports:
-        - "8080:80"
-    db:
-      image: mysql:5.7
-      environment:
-        MYSQL_ROOT_PASSWORD: example
-  ```  
-  `docker-compose up`으로 모든 서비스를 동시에 실행할 수 있다.  
-- **Docker Desktop:**  
-  GUI 기반 관리 툴로, 컨테이너, 이미지, 볼륨 등의 상태를 직관적으로 확인할 수 있으나, CLI에 비해 세밀한 제어가 제한될 수 있다.  
-**해설:**  
-두 도구의 사용 상황과 장단점을 비교 분석하면 답변이 더욱 풍부해진다.
+34. [단답형 문제]  
+문제: 현재 **실행 중인 모든 Docker 컨테이너 목록**을 확인하는 명령어는 무엇인가?  
+정답: `docker ps` 명령어를 사용하면 현재 동작 중인 모든 컨테이너 목록을 확인할 수 있습니다. (`-a` 옵션을 추가하면 종료된 컨테이너까지 포함한 **전체 컨테이너 목록**을 볼 수 있습니다.)
 
----
-
-## 7. 시험 응시 전략 및 오픈북 활용법
-
-### 7.1 자료 정리 및 인덱스 활용
-**문제:** 오픈북 시험 시, 참고 자료를 효과적으로 정리하고 활용하는 방법을 서술하라.  
-**정답 예시:**  
-- 각 주제별 핵심 개념, 명령어, 예제와 함께 출제 가능성이 높은 부분을 미리 정리하여 목차 및 색인을 작성  
-- 페이지 번호나 문서 내 링크를 통해 신속한 검색과 참조가 가능하도록 문서를 구성  
-**해설:**  
-평소 정리 및 인덱스 작성 습관이 오픈북 시험에서 시간 관리와 문제 해결에 크게 기여한다.
-
-### 7.2 시간 관리 및 문제 분석 전략
-**문제:** 오픈북 시험 시 효율적인 시간 관리와 문제 분석을 위한 전략을 서술하라.  
-**정답 예시:**  
-- 문제를 빠르게 읽고 핵심 키워드를 파악한 후, 정리된 자료에서 해당 정보를 신속히 참조  
-- 쉬운 문제부터 먼저 해결하고, 남은 시간에 어려운 문제에 집중하는 전략을 세운다.  
-- 모의고사나 기출 문제를 반복적으로 연습하여, 시간 배분과 우선순위 결정을 미리 익힌다.  
-**해설:**  
-시험 응시 전략은 단순 암기보다는 문제 상황에 맞는 응용 능력을 평가하므로, 자료 정리와 연습이 필수적이다.
-
----
+35. [개념 설명 문제]  
+문제: **Docker Compose**는 무엇이며, 어떤 경우에 유용하게 쓰이는지 설명하시오.  
+정답: Docker Compose는 여러 개의 컨테이너로 구성된 애플리케이션을 한꺼번에 정의하고 관리하기 위한 **도구**입니다. 보통 `docker-compose.yml`이라는 설정 파일에 웹서버, DB 등 여러 서비스를 하나의 스택으로 정의해두고, `docker-compose up` 명령 한 번으로 **모든 컨테이너를 일괄 실행 및 서로 연동**시킬 수 있습니다. 즉, Compose를 사용하면 복잡한 다중 컨테이너 환경(예: 웹 애플리케이션 + 데이터베이스 + 캐시 서버 등)을 손쉽게 구성하고 시작/중지할 수 있어 **개발 및 배포**에 매우 유용합니다.
