--- a/기말고사.md
+++ b/기말고사.md
@@ -10,25 +10,9 @@
 
 ---
 
-## TEST1
+# TEST1
 
-### Bash 쉘 사용
-```sh
-#! /bin/bash
-```
-
-### 기본 Bourne Shell 사용 (보통 /bin/bash와 동일)
-```sh
-#! /bin/sh
-```
-
-## Bash 스크립트 실행 예제
-```sh
-#! /bin/bash
-echo "Hello, World!"
-```
-
-### 실행 방법
+## 실행 방법
 ```sh
 chmod +x script.sh  # 실행 권한 부여
 ./script.sh         # 실행
